@@ -1,4 +1,12 @@
 
+### NEW FEATURES
+* heatmaply
+  - Add `cellnote_size` argument, controlling the font size of the cellnote.
+### BUG FIXES
+* heatmaply
+  - removing tick labels with `showticklabels` now removes the ticks as
+    well as the tick labels.
+
 heatmaply 0.11.1 (2017-09-27)
 ================
 
